--- a/404.html
+++ b/404.html
@@ -5,13 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<meta name="og:title" content="404 ~ prokop's art" />
-		<meta name="og:url" content="https://prokops.art/" />
+		<meta name="og:title" content="Fergy and Friends" />
+		<meta name="og:url" content="https://fergyandfriends.com/" />
 		<meta name="og:image" content="resources/img/banner.png" />
 		<meta property="og:image" content="resources/img/banner.png" />
-		<meta name="og:site_name" content="prokop's art" />
+		<meta name="og:site_name" content="Fergy and Friends" />
 		<meta name="og:description" content="404: page not found." />
-		<meta name="og:email" content="prokop@prokops.art" />
+		<meta name="og:email" content="hello@fergyandfriends.com" />
 
 		<meta name="twitter:image" content="resources/img/banner.png" />
 		<meta property="twitter:image" content="resources/img/banner.png" />
@@ -22,14 +22,14 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
-		<title>404 ~ prokop's art</title>
+		<title>Fergy and Friends</title>
 	</head>
 	<body>
 		<div class="main-container">
-			<img src="resources/img/logo.png" alt="prokop's art logo" class="logo" />
+			<img src="resources/img/logo.png" alt="Fergy and Friends Logo" class="logo" />
 			<h1>404: page not found.</h1>
 			<p>are you sure you're in the right place?</p>
-			<a class="button" href="https://prokops.art">homepage</a>
+			<a class="button" href="https://fergyandfriends.com">homepage</a>
 		</div>
 	</body>
 </html>
