--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<meta name="og:title" content="prokop's art" />
-		<meta name="og:url" content="https://prokops.art/" />
+		<meta name="og:title" content="Fergy and Friends" />
+		<meta name="og:url" content="https://fergyandfriends.com/" />
 		<meta name="og:image" content="resources/img/banner.png" />
 		<meta property="og:image" content="resources/img/banner.png" />
-		<meta name="og:site_name" content="prokop's art" />
-		<meta name="og:description" content="all links to ash's stuff !" />
-		<meta name="og:email" content="prokop@prokops.art" />
+		<meta name="og:site_name" content="Fergy and Friends" />
+		<meta name="og:description" content="All things Fergy and Friends!" />
+		<meta name="og:email" content="hello@fergyandfriends.com" />
 
 		<meta name="twitter:image" content="resources/img/banner.png" />
 		<meta property="twitter:image" content="resources/img/banner.png" />
@@ -22,23 +22,19 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
-		<title>prokop's art</title>
+		<title>Fergy and Friends</title>
 	</head>
 	<body>
 		<div class="main-container">
-			<img src="resources/img/logo.png" alt="prokop's art logo" class="logo" />
-			<h1>prokop's art</h1>
+			<img src="resources/img/logo.png" alt="Fergy and Friends Logo" class="logo" />
+			<h1>Fergy and Friends :]</h1>
 			<div class="div-container">
-				<a class="button" href="https://ko-fi.com/s/3da60faed1">pre-order my merch &lt;3</a>
-				<a class="button" href="https://instagram.com/prokops.art">instagram</a>
-				<a class="button" href="https://ko-fi.com/prokop">commission me (ko-fi)</a>
-				<a class="button" href="https://ko-fi.com/prokop/shop">download my font / branding</a>
-				<a class="button" href="https://discord.gg/5fRDDsCpXj">discord server</a>
-				<!-- <a class="button" href="https://tiktok.com/@prokops.art">tiktok</a> -->
-				<!-- <a class="button" href="https://prokops.art">website</a> -->
-				<!-- <a class="button" href="https://twitter.com/prokops_art">twitter</a> -->
-				<!-- <a class="button" href="https://reddit.com/r/prokops_art">reddit</a> -->
-				<a class="button" href="mailto:prokop@prokops.art">e-mail</a>
+				<a class="button" href="https://instagram.com/fergyandfriends">Instagram</a>
+				<a class="button" href="https://ko-fi.com/fergyandfriends">Commission Me (Ko-Fi)</a>
+				<a class="button" href="https://ko-fi.com/fergyandfriends/shop">Merch Store</a>
+				<a class="button" href="https://discord.gg/5fRDDsCpXj">Discord Server</a>
+				<!-- <a class="button" href="https://tiktok.com/@fergyandfriends">tiktok</a> -->
+				<a class="button" href="mailto:hello@fergyandfriends.com">E-Mail Me</a>
 			</div>
 		</div>
 	</body>
