--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<h1>Fergy and Friends :]</h1>
 			<div class="div-container">
 				<a class="button" href="https://instagram.com/prokops.art">Instagram</a>
+				<a class="button" href="https://tiktok.com/@fergy.and.friends">TikTok</a>
 				<a class="button" href="https://ko-fi.com/prokop">Commission Me (Ko-Fi)</a>
 				<a class="button" href="https://ko-fi.com/prokop/shop">Merch Store</a>
 				<a class="button" href="https://discord.gg/5fRDDsCpXj">Discord Server</a>
