--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
 			<img src="resources/img/logo.png" alt="Fergy and Friends Logo" class="logo" />
 			<h1>Fergy and Friends :]</h1>
 			<div class="div-container">
-				<a class="button" href="https://instagram.com/prokops.art">Instagram</a>
-				<a class="button" href="https://tiktok.com/@fergy.and.friends">TikTok</a>
-				<a class="button" href="https://ko-fi.com/prokop">Commission Me (Ko-Fi)</a>
-				<a class="button" href="https://ko-fi.com/prokop/shop">Merch Store</a>
+				<a class="button" href="https://instagram.com/fergyandfriends">Instagram</a>
+				<a class="button" href="https://tiktok.com/@fergy_and_friends">TikTok</a>
+				<a class="button" href="https://ko-fi.com/fergyandfriends">Commission Me (Ko-Fi)</a>
+				<a class="button" href="https://ko-fi.com/fergyandfriends/shop">Merch Store</a>
 				<a class="button" href="https://discord.gg/5fRDDsCpXj">Discord Server</a>
-				<!-- <a class="button" href="https://tiktok.com/@fergyandfriends">tiktok</a> -->
 				<a class="button" href="mailto:hello@fergyandfriends.com">E-Mail Me</a>
 			</div>
 		</div>
